# esp32-thingsboard-mqtt-client

./: .gitignore  .readthedocs.yml  CMakeLists.txt  Kconfig  README.docs.md  README.md  README_CN.md  TODO  component.mk  esp-mqtt_api.ods
components/tbcm/: CMakeLists.txt  Kconfig  README.md  README_CN.md  esp-mqtt_api.ods
components/tbcm/include/: tbc_extension.h  tbc_extension_clientattributes.h  tbc_extension_sharedattributes.h  tbc_extension_telemetry.h  tbc_extension_timeseriesdata.h  tbc_mqtt.h  tbc_mqtt_helper.h  tbc_mqtt_protocol.h  tbc_transport_config.h  tbc_utils.h
components/tbcm/src/extension/: client_attribute.c  client_attribute.h  shared_attribute.c  tbc_extension_clientattributes.c  tbc_extension_sharedattributes.c  tbc_extension_telemetry.c  tbc_extension_timeseriesdata.c  timeseries_data.c  timeseries_data.h
components/tbcm/src/helper/: attributes_request.c  attributes_request.h  attributes_request_observer.c  attributes_request_observer.h  attributes_subscribe.c  attributes_subscribe.h  attributes_update.c  attributes_update.h  claiming_device.c  claiming_device.h  client_attribute.c  client_attribute.h  client_attribute_helper.c  client_attribute_helper.h  client_rpc.c  client_rpc.h  client_rpc_observer.c  client_rpc_observer.h  device_provision.c  device_provision.h  ota_fwupdate.c  ota_fwupdate.h  ota_update.c  ota_update.h  ota_update_observer.c  ota_update_observer.h  provision_observer.c  provision_observer.h  provision_request.h  server_rpc.c  server_rpc.h  server_rpc_observer.c  server_rpc_observer.h  shared_attribute.c  shared_attribute.h  shared_attribute_observer.c  shared_attribute_observer.h  tbc_mqtt_helper.c  tbc_mqtt_helper_internal.h  telemetry_upload.c  (+4 more)
components/tbcm/src/mqtt/: tbc_mqtt.c  tbc_mqtt.h  tbc_mqtt_payload_buffer.c
components/tbcm/src/transport/: tbc_transport_config.c  tbc_transport_storage.c
components/tbcm/src/wapper/: tbc_mqtt_payload_buffer.h  tbc_mqtt_wapper.c  tbc_mqtt_wapper.h
components/tbcmh/: CMakeLists.txt  README.md  README_CN.md  component.mk
components/tbcmh/include/: tbc_extension.h  tbc_extension_clientattributes.h  tbc_extension_sharedattributes.h  tbc_extension_timeseriesdata.h  tbc_mqtt_helper.h  tbc_mqtt_protocol.h  tbc_transport_config.h
components/tbcmh/src/extension/: tbc_extension_clientattributes.c  tbc_extension_sharedattributes.c
components/tbcmh/src/helper/: attributes_request.c  attributes_request.h  attributes_subscribe.c  attributes_update.c  claiming_device.c  claiming_device.h  client_rpc.c  gateway.c  ota_fwupdate.c  ota_update.c  ota_update.h  provision_request.c  server_rpc.c  tbc_mqtt_helper.c  telemetry_upload.c  telemetry_upload.h
components/tbcmh/src/transport/: tbc_transport_config.c
components/tbcmh/src/wapper/: tbc_mqtt_payload_buffer.c  tbc_mqtt_wapper.c  tbc_mqtt_wapper.h
components/tbcmh/test/: CMakeLists.txt  component.mk
components/tbmc/: CMakeLists.txt  README.md  README_CN.md  component.mk  esp-mqtt_api.ods
components/tbmc/include/: tb_mqtt_client.h  tb_mqtt_client_helper.h  tbc_mqtt.h  tbc_mqtt_helper.h  tbc_transport_config.h  tbc_util.h  tbc_utils.h
components/tbmc/private_include/: attributes_request_observer.h  client_attribute_helper.h  client_rpc_observer.h  fw_update_observer.h  ota_update_observer.h  provision_observer.h  server_rpc_observer.h  shared_attribute_observer.h  tb_mqtt_client_helper_log.h  tb_mqtt_client_log.h  tbmc_payload_buffer.h  timeseries_data_helper.h
components/tbmc/src/: tb_mqtt_client.c  tbc_transport_config.c  tbc_transport_storage.c  tbmc_payload_buffer.c
components/tbmc/src/helper/: attributes_request_observer.c  attributes_request_observer.h  client_attribute_helper.c  client_attribute_helper.h  client_rpc_observer.c  client_rpc_observer.h  fw_update_observer.c  ota_update_observer.c  ota_update_observer.h  provision_observer.c  provision_observer.h  server_rpc_observer.c  server_rpc_observer.h  shared_attribute_observer.c  shared_attribute_observer.h  tb_mqtt_client_helper.c  tbc_mqtt_helper.c  timeseries_data_helper.c  timeseries_data_helper.h
components/tbmc/src/mqtt/: tbc_mqtt.c  tbc_mqtt_payload_buffer.c  tbc_mqtt_payload_buffer.h
components/tbmc/src/transport/: tbc_transport_storage.h
components/tbmc/test/: CMakeLists.txt
docs/: conf.py  index.rst  requirements.txt
docs/concepts/: attributes.rst  ota_update.rst  provision.rst  time-series_data.rst
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: README.md  README_CN.md  build_all_examples.bat  build_all_examples.sh  clean_all_examples.bat  clean_all_examples.sh  compile_all_examples.bat  compile_all_examples.sh  fullclean_all_examples.bat  fullclean_all_examples.sh
examples/.docs/: check-latest-telemetry.md  (+16 more)
examples/provision/pd24_dev_sup_basic_mqtt_credential_cup_w_onewayssl/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  dev_sup_basic_mqtt_credential_cup_w_onewayssl_main.c  mqtt_thingsboard_server_cert.pem  tbc_front_connection.c
examples/provision/ps20_srv_gen_credentials_w_onewayssl/main/: CMakeLists.txt  Kconfig.projbuild  srv_gen_credentials_w_onewayssl_main.c  tbc_normal_connection.c
examples/tb_mqtt_client_helper/60_device_provisioning/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  device_provisioning_main.c  tbc_front_connection.c  tbc_normal_connection.c  tbc_transport_credentials.h  tbc_transport_credentials_memory.c  tbmch_front_connection.c  tbmch_normal_connection.c
include/: tb_mqtt_client.h  tb_mqtt_client_helper.h  tbmc_helper.h  tbmc_low.h  thingsboard_mqttclient.h
src/: attributes_request_observer.c  attributes_request_observer.h  client_attribute_helper.c  client_attribute_helper.h  client_rpc_observer.c  client_rpc_observer.h  fw_observer.h  fw_update_observer.c  fw_update_observer.h  server_rpc_observer.c  server_rpc_observer.h  shared_attribute_observer.c  shared_attribute_observer.h  tb_mqtt_client.c  tb_mqtt_client_helper.c  tbmc_helper.c  tbmc_low.c  telemetry_datapoint_helper.h  timeseries_data_helper.c  timeseries_data_helper.h
test/: test_tb_mqtt_client.c
(+541 files in other folders)
